Flare v1.10 (WIP)

Engine features:

* The configuration menu has been redesigned and is now used as the pause menu.
* The interface features from version 1.09 have been reverted due to being accessible from the pause menu.
* Added an Interface option to disable showing hidden entity markers.

Engine fixes:

* Fixed event activation being tied to distance to the camera position. It is now correctly tied to distance from the player.
* Mouse movement and mouse aim now calculate direction relative to the player instead of relative to the screen.
* Fixed enemy AI so that enemies can now enter combat if a hero ally is in their proximity.
* Fix --data-path command line flag on Windows.
* Fixed dialog not being available if it lacked a topic.

Game updates:

* Fixed an oversight that allowed easy farming of the Torture Chambers boss and loot chests.

Translation updates:

* Belarusian (be) update (Zmicer Turok)
* Catalan (ca) update (Marc Tormo i Bochaca)
* German (de) update (Fyrenic)
* French (fr) update (syl_)
* Portuguese (pt) update (Rui)
* Russian (ru) update (Andrey Kapitonov, Igor Paliychuk)
* Chinese (zh) update (dumaosen, neverwin)



Flare v1.09.01 (http://flarerpg.org/index.php/2018/12/12/flare-1-09-01/)

Engine fixes:

* Fixed assertion/crash when engaging in dialog.

Game updates:

* Fixed main weapon layer order when hero is facing east.

Translation updates:

* Ukranian (uk) update (Микола Франчук)



Flare v1.09 (http://flarerpg.org/index.php/2018/12/09/flare-1-09/)

Engine features:

* Redesigned mouse movement with better handling of non-melee attacks.
* New mouse movement options to swap the movement button and/or restrict the movement button to be movement-only.
* Loot tooltips can now be hidden when entities are near pieces of loot. The setting "hide_radius" has been added to engine/loot.txt to control this.
* Overhead markers are now displayed for entities that are obscured by tall tiles.